--- a/ordex-app/src/app/pages/supplier-panel/supplier-panel.component.html
+++ b/ordex-app/src/app/pages/supplier-panel/supplier-panel.component.html
@@ -13,14 +13,14 @@
 
     <!-- Sidebar Menu -->
     <ul class="space-y-4 flex-1">
-      <li>
-        <a routerLink="dashboard" routerLinkActive="text-yellow-400 bg-gray-700" class="block px-4 py-2 rounded-md hover:bg-gray-700">
-          Tableau de bord
-        </a>
-      </li>
+<!--      <li>-->
+<!--        <a routerLink="dashboard" routerLinkActive="text-yellow-400 bg-gray-700" class="block px-4 py-2 rounded-md hover:bg-gray-700">-->
+<!--          Tableau de bord-->
+<!--        </a>-->
+<!--      </li>-->
       <li>
         <a routerLink="products" routerLinkActive="text-yellow-400 bg-gray-700" class="block px-4 py-2 rounded-md hover:bg-gray-700">
-          Produits
+          Tableau de bord
         </a>
       </li>
     </ul>
